fixed some spacings and added emojis

--- a/src/app/questions/questions.component.css
+++ b/src/app/questions/questions.component.css
@@ -1,4 +1,6 @@
-
+.wrapper{
+    margin: 5px;
+}
 
 .tno {
     background-color: #fff;
